Ensure bin/up runs in integration